# app.js
@@ -9,6 +9,7 @@ const healthRouter = require('./src/routes/health.routes')
 const utilityRouter = require('./src/routes/utility.routes')
 const authRouter = require('./src/routes/auth.routes');
 const parameterRouter = require('./src/routes/parameter.routes');
+const promptRouter = require('./src/routes/prompt.routes');
 
 app.use(cors())
 app.use(express.json())
@@ -17,6 +18,7 @@ app.use('/health', healthRouter)
 app.use('/utility', utilityRouter)
 app.use('/auth', authRouter)
 app.use('/admin/parameters', parameterRouter)
+app.use('/prompts', promptRouter)
 
 app.get('/openapi.json', (req, res) =>　/* #swagger.ignore = true */ res.json(swaggerDocument));
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
